#122 validation API: 1. JsonApiRequestParsingUtil should do any validation 2. JsonApi4j has default JsonApi validation that evaluates JsonApiRequest 3. Custom user validation is done via .getValidator() in operations 4. Fix multiple cache variations issue for cached JsonApiRequest payload 5. Refactorings & cleanups